--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "compatibility-matrix": "file:",
+    "crypto-js": "^4.2.0",
     "lucide-react": "^0.488.0",
+    "nanoid": "^5.1.5",
     "next": "15.3.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
